app/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickpoll
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: quickpoll.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 8000
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 80
